feat: add get jobs endpoint
